--- a/Aura.uproject
+++ b/Aura.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{EE524E03-4383-C08D-55A9-64ACD074A54B}",
+	"EngineAssociation": "{EABC3EF5-4249-DBC6-2914-B59B03616889}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -10,7 +10,9 @@
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
 				"Engine",
-				"GameplayAbilities"
+				"GameplayAbilities",
+				"UMG",
+				"CoreUObject"
 			]
 		}
 	],
