--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,4 @@ CopyrightNotice=Copyright BanMing
 
 [/Script/GameplayAbilities.AbilitySystemGlobals]
 +AbilitySystemGlobalsClassName="/Script/Aura.AuraAbilitySystemGlobals"
++GameplayCueNotifyPaths=/Game/Blueprints/AbilitySystem/GC
